--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,17 @@ body{
 .banner{
     background-image: url(img/banner.png);
     background-size: cover;
-    color: white;
-    border-top: 10px solid rgb(83, 198, 94);
+    color: rgb(2, 2, 2);
+    border-top: 10px double rgb(123, 250, 64);
 
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 350px;
 }
 
 .banner > div{
-    width: 400px;
+    
 }
 
 .banner h1{
@@ -39,12 +39,15 @@ body{
 
 .banner p{
     font-size: 20px;
+    font-family: fantasy;
 }
 
 .banner > img{
-    width: 250px;
+    width: 400px;
     align-self: flex-end;
     display: none;
+    padding-right: 50%;
+    height: 400px;
 }
 
 .banner .icones img:hover{
@@ -57,11 +60,77 @@ body{
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 100%;
 }
+ 
+#um img{
+    padding-right: 30px;
+    align-self: flex-end;
+  
+}
+
+.dois{
+    justify-content: space-around;
+    display: flex;
+  
+
+}
+
+
+.imagens{
+    background-color: rgb(0, 139, 0);
+  border-radius: 100%;
+  margin-top: 10%;
+  padding: 20px;
+  
+}
+
+
+
+.dois> div{
+  width: 230px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+#dois{
+    
+    justify-content: space-around;
+    display: flex;
+
+}  
+
+
+#sec{
+    display: flex;
+    background-color: gray;
+    margin-top: 10%;
+   
+ }
+
+iframe{
+    border-radius: 70%;
+}
+
+#titulo {
+    font-family: cursive;
+    font-size: 21px;
+    text-align: center;
+    margin-top: 10;
+
+}
+
+#frame{
+    width: 100%;
+    border-radius: 50%;
+
+}
 
 @media(min-width: 768px){
     .banner{
         height: 38vw;
-        padding: 0 100px;
+        padding:  100px;
     }
 
     .banner > img{
@@ -73,10 +142,10 @@ body{
 @media(min-width: 1024px){
     .banner{
         height: 38vw;
-        padding: 0 200px;
+        padding: 0 40px;
     }
 
-    .banner > img{
+    .banner > div > img{
         width: 350px;
         display: block;
     }
